# Image-Processing-Projects

./: README.md
ACE/: CMakeLists.txt  main.cpp
AnisotropicFilter/: CMakeLists.txt  main.cpp
BicubicInterpolation/: CMakeLists.txt  main.cpp
Embossment/: CMakeLists.txt  main.cpp
Fitter/: fitter.cpp  fitter.h
FuzzyConnectedness/FuzzyConnected/: CMakeLists.txt  fuzzyconnectedness.cpp  fuzzyconnectedness.h  fuzzyconnectednessbase.cpp  fuzzyconnectednessbase.h  main.cpp
FuzzyConnectedness/FuzzyConnectedness-master/: README.md
FuzzyConnectedness/FuzzyConnectedness-master/FC_Dijkstra/: adjacency.cpp  adjacency.h  afc.cpp  afc.h  affinity.cpp  affinity.h  common.cpp  (+3 more)
FuzzyConnectedness/FuzzyConnectednessITK/: CMakeLists.txt  main.cpp
GuidedFilter/: guidedFilter.cpp  guidedFilter.h  main.cpp
HazeRemoval/: 基于单幅图像的快速去雾算法_刘倩.caj
IntelligentScissor/: CMakeLists.txt  main.cpp
KSWEntropy/: main.cpp
MultiphaseLevelSet/Mutliphase/: CURVATURE_CV.m  Delta.m  EVOLUTION_4PHASE.m  Heaviside.m  Multiphase.m  backward_gradient.m  forward_gradient.m  initial_sdf2circle.m  plotLevelSet.m  quadrifit.m
Retinex/src/: MSRCR.cpp  MSRCR.h  main.cpp
Test/: CMakeLists.txt
Test/include/: apple.h  orange.h  pear.h
Test/lib/Debug/: apple.exp  apple.ilk  apple.lib  fruit.ilk  orange.exp  orange.ilk  orange.lib  pear.exp  pear.ilk  pear.lib
Test/src/: CMakeLists.txt  main.cpp
Test/src/apple/: CMakeLists.txt  apple.cpp
Test/src/orange/: CMakeLists.txt  orange.cpp
Test/src/pear/: CMakeLists.txt  pear.cpp
TotalVariation/: CMakeLists.txt  TV推导过程.docx  main.cpp
TotalVariation-bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  TotalVariation.sln  TotalVariation.vcxproj  TotalVariation.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TotalVariation/TV/: hpROF.m  main.m  tv.m
Wiener/: CMakeLists.txt  main.cpp
(+32 files in other folders)
